Add Renderer2 to Project

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Motocicletas eléctricas | Niu</title>
+  <title>Electric Motorcycles | Niu</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="./assets/img/iconPage.png">
@@ -13,5 +13,5 @@
 <body>
     <app-root></app-root>
 </body>
-
+    
 </html>
